merge manually user+ event